# stub-index

./: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  debug_parser  demo  simple_test  stub_index_test
docs/: 01-stub-index-concept-architecture.md  02-cpp-parser-implementation.md  03-complete-stub-index-system.md
examples/: debug_parser.cpp  demo.cpp  simple_test.cpp
src/: psi_node.cpp  psi_node.h  psi_tree_builder.cpp  psi_tree_builder.h  psi_tree_operations.cpp  psi_tree_operations.h  psi_tree_transformer.cpp  psi_visitor.h  stub_entry.h  stub_index.cpp  stub_index.h  stub_parser.cpp  stub_parser.h
tech-blog/: 01-psi-tree-introduction.md  02-psi-tree-design-implementation.md  03-psi-tree-operations-query.md  04-psi-tree-stub-integration.md
test/: function_stub_test.cpp  integration_test.cpp  parser_test.cpp  psi_node_test.cpp  psi_tree_builder_test.cpp  psi_tree_operations_test.cpp  psi_tree_transformer_test.cpp  stub_entry_test.cpp  stub_index_test.cpp  variable_stub_test.cpp
